# dev

./: .gitignore  CLAUDE.md  README.md  partitions_16MB_large.csv  platformio.ini
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
dashos/: main.py  requirements.txt
dashos/config/: dashos.conf  modules.json
dashos/qml/: Main.qml
dashos/qml/components/: AlertBanner.qml  DataRow.qml  Gauge.qml
dashos/qml/modules/: Dashboard.qml  MediaPlayer.qml  Meshtastic.qml  Settings.qml
dashos/scripts/: install.sh  setup_autostart.sh  update_ota.sh
dashos/services/: __init__.py  data_logger.py  meshtastic_service.py  power_manager.py  serial_bridge.py  update_service.py
desktop/: main.py  run_desktop.bat  run_desktop.sh
desktop/config/: desktop.conf
desktop/qml/: Main.qml
desktop/qml/modules/: DTCViewer.qml  OBD2Scanner.qml  Settings.qml
desktop/services/: __init__.py  data_logger.py  serial_bridge.py
include/: board_config.h  esp_panel_board_custom_conf.h  lv_conf.h  obd2_dtc.h  obd2_pids.h  sd_logger.h  serial_protocol.h  ui_dashboard.h
simulator/: CMakeLists.txt  hal_stubs.h  lv_conf.h  main.cpp
src/: main.cpp
